Bug 400310.  Deadlock when Thunderbird starts with Accessibility, or when Firefox starts after an auto-update, effective 2007-10-07. Patch by Ginn Chen, r=aaronlev, a=beltzner